version/0.12/_sources/api/solver/_autosummary/settings/set.rst.txt
:orphan:

.. _set:

set
===

.. currentmodule:: ansys.fluent.core.solver.settings_231.set

.. autoclass:: set
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================================================   =====================================================================================================================

Child                                                                                                                                                                              Summary

==================================================================   =====================================================================================================================
:ref:`anisotropic_boundary_zones <anisotropic_boundary_zones>`                                                    Set the boundary zones to specify directions for anisotropic refinement.

:ref:`cell_zones <cell_zones>`                                           Set cell zones to be used for marking adaption. An empty list implies that all zones are considered for adaption.

:ref:`dynamic_adaption_frequency <dynamic_adaption_frequency>`                                                                                         Set frequency for dynamic adaption.

:ref:`verbosity <verbosity>`                                                                                                                                   Set the adaption verbosity.

:ref:`encapsulate_children <encapsulate_children>`                                                                         Encapsulate all children of parent cells on the same partition.

:ref:`maximum_refinement_level <maximum_refinement_level>`                                                                                    Set maximum level of refinement in the mesh.

:ref:`minimum_cell_quality <minimum_cell_quality>`                                                                       Set limit on the minimum cell orthogonal quality during adaption.

:ref:`maximum_cell_count <maximum_cell_count>`                                                                                   Set limit on the maximum number of cells during adaption.

:ref:`additional_refinement_layers <additional_refinement_layers>`                                                                Set the number of additional cell layers for refinement.

:ref:`anisotropic_adaption <anisotropic_adaption>`                                                                                Enable/Disable anisotropic adaption for prismatic cells.

:ref:`minimum_edge_length <minimum_edge_length>`                                                                          Limit on the minimum effective edge-length of cells in the mesh.

:ref:`anisotropic_split_ratio <anisotropic_split_ratio>`                                                                Set the split ratio for anisotropic refinement of prismatic cells.

:ref:`overset_adapt_dead_cells <overset_adapt_dead_cells>`                                                                               Enables adaption of dead cells in overset meshes.

==================================================================   =====================================================================================================================

.. rubric:: Commands

==========================================   ===================================

Command                                                                  Summary

==========================================   ===================================
:ref:`dynamic_adaption <dynamic_adaption>`       Adapt the mesh during solution.

==========================================   ===================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`adapt <adapt>`       'adapt' child.

====================   ==================

